[project]
name = "te-api"
version = "0.1.1"
description = "Transparent Edge API CLI Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "requests",
    "python-dotenv",
    "pyyaml",
]

[project.scripts]
te-api = "te_api.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
]
